<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DownloadFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title_1_download"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="27dp"
            android:gravity="center_horizontal"
            android:text="@string/download_receitas_title_1"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/title_2_download"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_2_download"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="83dp"
            android:gravity="center_horizontal"
            android:text="@string/download_receitas_title_2"
            android:textAlignment="center"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_download_pdf"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_1_download" />

        <Button
            android:id="@+id/btn_download_pdf"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/primary"
            android:text="@string/btn_download_pdf"
            android:textSize="12sp"
            app:icon="@android:drawable/stat_sys_download"
            app:layout_constraintBottom_toTopOf="@+id/btn_download_csv"
            app:layout_constraintEnd_toStartOf="@+id/btn_download_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_2_download" />

        <Button
            android:id="@+id/btn_download_odf"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="195dp"
            android:backgroundTint="@color/primary"
            android:text="@string/btn_download_odf"
            android:textSize="12sp"
            app:icon="@android:drawable/stat_sys_download"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_download_ods"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_download_csv" />

        <Button
            android:id="@+id/btn_download_csv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="38dp"
            android:backgroundTint="@color/primary"
            android:text="@string/btn_download_csv"
            android:textSize="12sp"
            app:icon="@android:drawable/stat_sys_download"
            app:layout_constraintBottom_toTopOf="@+id/btn_download_odf"
            app:layout_constraintEnd_toStartOf="@+id/btn_download_odt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_download_pdf" />

        <Button
            android:id="@+id/btn_download_odt"
            android:layout_width="0dp"
            android:layout_height="61dp"
            android:layout_marginEnd="25dp"
            android:backgroundTint="@color/primary"
            android:text="@string/btn_download_odt"
            android:textSize="12sp"
            app:icon="@android:drawable/stat_sys_download"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_download_csv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_download_csv" />

        <Button
            android:id="@+id/btn_download_txt"
            android:layout_width="0dp"
            android:layout_height="61dp"
            android:layout_marginEnd="25dp"
            android:backgroundTint="@color/primary"
            android:text="@string/btn_download_txt"
            android:textSize="12sp"
            app:icon="@android:drawable/stat_sys_download"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_download_pdf"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_download_pdf" />

        <Button
            android:id="@+id/btn_download_ods"
            android:layout_width="0dp"
            android:layout_height="61dp"
            android:layout_marginEnd="25dp"
            android:backgroundTint="@color/primary"
            android:text="@string/btn_download_ods"
            android:textSize="12sp"
            app:icon="@android:drawable/stat_sys_download"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_download_odf"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_download_odf" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>